# preqin-fullstack-interview-task

preqin-fullstack-api/: README.md  main.py  pyproject.toml
preqin-fullstack-api/models/: investor.db  investor.db-journal  investor.py  modifiedDataToIncludeId.csv
preqin-fullstack-api/src/: preqin.db
preqin-fullstack-api/src/investors/: crud.py  database.py  helpers.py  investor_controller.py  main.py  models.py  preqin.db  schemas.py
preqin-fullstack-api/src/tests/: conftest.py  test_main.py
preqin-fullstack-ui/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
preqin-fullstack-ui/src/: App.tsx  main.css  main.tsx
preqin-fullstack-ui/src/components/: InvestorTable.tsx
preqin-fullstack-ui/src/components/tests/: investorTable.test.tsx
preqin-fullstack-ui/src/components/tests/__snapshots__/: investorTable.test.tsx.snap
preqin-fullstack-ui/src/mocks/: mockInvestors.ts
preqin-fullstack-ui/src/routes/: commitmentAssetClassPage.tsx  investorDetailsPage.tsx  root.tsx  rootPage.tsx
preqin-fullstack-ui/src/types/: index.ts
